--- a/.github/workflows/build_pr.yaml
+++ b/.github/workflows/build_pr.yaml
@@ -77,4 +77,5 @@ jobs:
         if: steps.buildCC.outcome == 'success'
         run: |
           pip install -r requirements.txt
+          pip install -e sailpoint
           python validation_test.py -v
