--- a/.github/workflows/push_package_to_testpypi.yaml
+++ b/.github/workflows/push_package_to_testpypi.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          user: __token__
           password: ${{secrets.ARTIFACTORY_TOKEN_DEV}}
           repository-url: https://sailpoint.jfrog.io/artifactory/sp-pypi-dev/
           packages-dir: sailpoint/dist/
