--- a/.github/workflows/push_package_to_testpypi.yaml
+++ b/.github/workflows/push_package_to_testpypi.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
+          token: ${{secrets.DEVREL_SERVICE_TOKEN}}
 
       - name: Set up Python
         uses: actions/setup-python@v4
