--- a/.github/workflows/push_package_to_testpypi.yaml
+++ b/.github/workflows/push_package_to_testpypi.yaml
@@ -47,7 +47,7 @@ jobs:
           # Ping the server (test connection)
           jf rt ping
           # Upload the package
-          jf rt u saipoint/dist/* sp-pypi-dev
+          jf rt u sailpoint/dist/* sp-pypi-dev
 
       # - name: Publish package distributions to PyPI
       #   uses: pypa/gh-action-pypi-publish@release/v1
