--- a/.github/workflows/push_package_to_testpypi.yaml
+++ b/.github/workflows/push_package_to_testpypi.yaml
@@ -48,6 +48,8 @@ jobs:
           jf rt ping
           # Upload the package
           jf rt u sailpoint/dist/sailpoint-1.0.0-py3-none-any.whl sp-pypi-dev
+          jf rt u sailpoint/dist/sailpoint-1.0.0.tar.gz sp-pypi-dev
+
 
       # - name: Publish package distributions to PyPI
       #   uses: pypa/gh-action-pypi-publish@release/v1
