Update install command to the correct location of setup.py

--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -120,7 +120,7 @@ jobs:
         shell: pwsh
         run: |
           pip install -r requirements.txt
-          pip install -e sailpoint
+          pip install -e .
           python validation_test.py -v
         
       - name: Commit changes and create new version tag
