--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 python_dateutil >= 2.5.3
 setuptools >= 21.0.0
 urllib3 >= 1.25.3, < 2.1.0
-pydantic >= 1.10.5, < 2
+pydantic >= 2
 aenum >= 3.1.11
+mypy>=1.4.1
+types-python-dateutil>=2.8.19
