--- a/sdk-resources/v2025-config.yaml
+++ b/sdk-resources/v2025-config.yaml
@@ -7,8 +7,8 @@ funtionPrefix: V2025
 subModuleName: V2025
 files:
   developerSite_code_examples.mustache:
-    templateType: APIDocs
-    destinationFilename: developerSite_code_examples.yaml
+    templateType: SupportingFiles
+    destinationFilename: sailpoint/v2025/docs/Examples/python_code_examples_overlay.yaml
   docs_methods_index.mustache:
     templateType: SupportingFiles
     destinationFilename: sailpoint/v2025/docs/Methods/Index.md
