--- a/.github/workflows/push_sdk_docs_to_dev_portal.yaml
+++ b/.github/workflows/push_sdk_docs_to_dev_portal.yaml
@@ -56,6 +56,7 @@ jobs:
             echo "No changes to commit."
             exit 0
           fi
+          git config --unset-all http.https://github.com/.extraheader
           git config --local user.email "devrel-service@sailpoint.com"
           git config --local user.name "developer-relations-sp"
           git add .
