Add v2026 release to the python SDK

--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -77,6 +77,7 @@ jobs:
           yq -i '.packageVersion = "${{ github.event.inputs.version }}"' sdk-resources/v3-config.yaml
           yq -i '.packageVersion = "${{ github.event.inputs.version }}"' sdk-resources/v2024-config.yaml
           yq -i '.packageVersion = "${{ github.event.inputs.version }}"' sdk-resources/v2025-config.yaml
+          yq -i '.packageVersion = "${{ github.event.inputs.version }}"' sdk-resources/v2026-config.yaml
 
 
 
@@ -119,6 +120,13 @@ jobs:
           rm -rf ./sailpoint/v2025
           java -jar openapi-generator-cli.jar generate -i api-specs/idn/sailpoint-api.v2025.yaml -g python -o . --global-property skipFormModel=false --config sdk-resources/v2025-config.yaml --enable-post-process-file
           node sdk-resources/postscript.js ./sailpoint/v2025
+      - name: Build V2026 SDK
+        id: buildV2026
+        if: steps.buildV2025.outcome == 'success'
+        run: |
+          rm -rf ./sailpoint/v2026
+          java -jar openapi-generator-cli.jar generate -i api-specs/idn/sailpoint-api.v2026.yaml -g python -o . --global-property skipFormModel=false --config sdk-resources/v2026-config.yaml --enable-post-process-file
+          node sdk-resources/postscript.js ./sailpoint/v2026
 
       - name: After SDK Build
         id: buildSDK
