--- a/.github/workflows/push_sdk_docs_to_dev_portal.yaml
+++ b/.github/workflows/push_sdk_docs_to_dev_portal.yaml
@@ -57,6 +57,11 @@ jobs:
           rsync -cav --delete python-sdk/sailpoint/v2025/docs/Models     developer-community/docs/tools/sdk/python/Reference/V2025
           rsync -av  python-sdk/sailpoint/v2025/docs/Examples/python_code_examples_overlay.yaml developer-community/static/code-examples/v2025/
 
+          # v2026
+          rsync -cav --delete python-sdk/sailpoint/v2026/docs/Methods    developer-community/docs/tools/sdk/python/Reference/V2026
+          rsync -cav --delete python-sdk/sailpoint/v2026/docs/Models     developer-community/docs/tools/sdk/python/Reference/V2026
+          rsync -av  python-sdk/sailpoint/v2026/docs/Examples/python_code_examples_overlay.yaml developer-community/static/code-examples/v2026/
+
       - name: Check for changes and commit if any
         working-directory: developer-community
         run: |
