--- a/.github/workflows/build_pr.yaml
+++ b/.github/workflows/build_pr.yaml
@@ -78,9 +78,17 @@ jobs:
           rm -rf ./sailpoint/v2025
           java -jar openapi-generator-cli.jar generate -i api-specs/idn/sailpoint-api.v2025.yaml -g python -o . --global-property skipFormModel=false,apiDocs=true,modelDocs=true --config sdk-resources/v2025-config.yaml --enable-post-process-file
           node sdk-resources/postscript.js ./sailpoint/v2025
+      
+      - name: Build V2026 SDK
+        id: buildV2026
+        if: steps.buildV2025.outcome == 'success'
+        run: |
+          rm -rf ./sailpoint/v2026
+          java -jar openapi-generator-cli.jar generate -i api-specs/idn/sailpoint-api.v2026.yaml -g python -o . --global-property skipFormModel=false,apiDocs=true,modelDocs=true --config sdk-resources/v2026-config.yaml --enable-post-process-file
+          node sdk-resources/postscript.js ./sailpoint/v2026
 
       - name: After SDK Build
-        if: steps.buildV2025.outcome == 'success'
+        if: steps.buildV2026.outcome == 'success'
         run: |
           pip install -r requirements.txt
           pip install -e .
