updated actions to latest

--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -21,7 +21,7 @@ jobs:
       contents: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
         with:
           ref: ${{ github.ref }}
           fetch-depth: 0
@@ -29,21 +29,21 @@ jobs:
 
     
       - name: Checkout API Specs Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
         with:
           repository: sailpoint-oss/api-specs
           path: api-specs
           ref: main
       
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v6
         with:
-          node-version: "16"
+          node-version: "24"
 
       - name: Run Prescript
         id: prescript
@@ -52,7 +52,7 @@ jobs:
 
       # Install yq for working with yaml files
       - name: Set up yq
-        uses: frenck/action-setup-yq@v1
+        uses: frenck/action-setup-yq@v2
 
       # Check input version is greater than the current tag
       - name: Check valid version
@@ -139,7 +139,7 @@ jobs:
         
       - name: Commit changes and create new version tag
         if: steps.buildSDK.outcome == 'success'
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: Bump version to ${{ github.event.inputs.version }}
           tagging_message: v${{ github.event.inputs.version }}
@@ -150,12 +150,12 @@ jobs:
 
       - name: Create Draft Release
         id: createRelease
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ github.event.inputs.version }}
-          release_name: v${{ github.event.inputs.version }}
+          name: v${{ github.event.inputs.version }}
           draft: false
           prerelease: false
 
